--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div>
             <div class="action-buttons menu-containeR">
-                <a href="tel:+48574154801" class="btn desktop-btn">Zadzwoń: <b>+48574154801</b></a> 
+                <a id="zadzwon" href="tel:+48574154801" class="btn desktop-btn">Zadzwoń: <b>+48574154801</b></a> 
                 <a href="mailto:podoswroclaw@gmail.com" class="btn desktop-btn">Napisz: <b>podoswroclaw@gmail.com</b></a>
             </div>
 
@@ -90,7 +90,7 @@
         <section id="home">
             <h1 id="home-title" class="home-title"></h1>
             <div class="img-contents">
-                <img src="img/podolog-os-removebg.png" alt="podolog Olena Stepaniuk Wroclaw">
+                <img src="img/podolog-os-removebg-1.png" alt="podolog Olena Stepaniuk Wroclaw">
                 <p id="home-content"></p>
             </div>
         </section>
