--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div>
             <div class="action-buttons menu-containeR">
-                <a id="zadzwon" href="tel:+48574154801" class="btn desktop-btn">Zadzwoń: <b>+48574154801</b></a> 
+                <a href="tel:+48574154801" class="btn desktop-btn">Zadzwoń: <b>+48574154801</b></a> 
                 <a href="mailto:podoswroclaw@gmail.com" class="btn desktop-btn">Napisz: <b>podoswroclaw@gmail.com</b></a>
             </div>
 
@@ -90,7 +90,7 @@
         <section id="home">
             <h1 id="home-title" class="home-title"></h1>
             <div class="img-contents">
-                <img src="img/podolog-os-removebg-1.png" alt="podolog Olena Stepaniuk Wroclaw">
+                <img src="img/podolog-os-removebg.png" alt="podolog Olena Stepaniuk Wroclaw">
                 <p id="home-content"></p>
             </div>
         </section>
@@ -419,13 +419,13 @@
             <div id="footer-social">
                 <div>
                     <h3 id="footer-social-1"></h3>
-                        <a class="sosial-link">
+                        <a class="sosial-link" href="https://www.facebook.com/profile.php?id=61569433260872" target="_blank">
                             <svg class="icon icon-facebook2"><use xlink:href="img/symbol-defs.svg#icon-facebook2"></use></svg>
                         </a>
-                        <a class="sosial-link">
+                        <a class="sosial-link" href="https://www.instagram.com/podos.wroclaw/" target="_blank">
                             <svg class="icon icon-instagram"><use xlink:href="img/symbol-defs.svg#icon-instagram"></use></svg>
                         </a>               
-                        <a class="sosial-link">
+                        <a class="sosial-link" href="https://maps.app.goo.gl/cS8QKggwWMPGqjtFA" target="_blank">
                             <svg class="icon icon-map2"><use xlink:href="img/symbol-defs.svg#icon-map2"></use></svg>
                         </a>
                 </div>
