--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section id="home">
             <h1 id="home-title" class="home-title"></h1>
             <div class="img-contents">
-                <img src="img/podolog-os-removebg.png" alt="podolog Olena Stepaniuk Wroclaw">
+                <img src="img/podolog-os-removebg-1.png" alt="podolog Olena Stepaniuk Wroclaw">
                 <p id="home-content"></p>
             </div>
         </section>
