--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul class="menu">
                         <li><a href="#home" class="active" id="home-link"></a></li>
-                        <li><a href="#o-nas" id="o-nas-link"></a></li>
+                        <li><a href="#about" id="about-link"></a></li>
                         <li><a href="#services" id="services-link"></a></li>
                         <li><a href="#contact" id="contact-link"></a></li>
                         <li><a href="#about" id="about-link"></a></li>
@@ -90,16 +90,16 @@
         <section id="home">
             <h1 id="home-title" class="home-title"></h1>
             <div class="img-contents">
-                <img src="img/podolog-os-removebg-1.png" alt="podolog Olena Stepaniuk Wroclaw">
+                <img src="img/podolog-os-removebg.png" alt="podolog Olena Stepaniuk Wroclaw">
                 <p id="home-content"></p>
             </div>
         </section>
         
         <!-- About Section -->
         <section id="about">
-            <h2 id="o-nas"></h2>
+            <h2 id="about"></h2>
             <div class="img-contents right-side">
-                <p id="o-nas-content"></p>
+                <p id="about-content"></p>
                 <img src="img/gabinet.jpg" alt="gabinet podologa we Wrocławiu">
             </div>
         </section>
