--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
         <!-- About Section -->
         <section id="about">
-            <h2 id="about"></h2>
+            <h2 id="about-title"></h2>
             <div class="img-contents right-side">
                 <p id="about-content"></p>
                 <img src="img/gabinet.jpg" alt="gabinet podologa we Wrocławiu">
