--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="#about" id="about-link"></a></li>
                         <li><a href="#services" id="services-link"></a></li>
                         <li><a href="#contact" id="contact-link"></a></li>
-                        <li><a href="#about" id="about-link"></a></li>
+                        <!-- <li><a href="#blog" id="blog-link"></a></li> -->
                     </ul>
                 </nav>
             </div>
