add google tag script

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="css/services-module.css">
     <link rel="icon" href="/img/favico.ico" type="image/x-icon" widgth="32px" height="32px">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PNN5DN61N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4PNN5DN61N');
+</script>
 <body>
     <header>
         <a class="logo" href="#home">
