--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 </div>
             </div>
         </div>
-            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d626.1959852510071!2d17.0076063!3d51.1124464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc206efb1a915%3A0xed5b779e497e2d24!2sBraniborska%2061%2C%2053-680%20Wroc%C5%82aw!5e0!3m2!1spl!2spl!4v1733858593489!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p id="footer-text"></p>
     </footer>
 
