--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/services-module.css">
     <link rel="icon" href="/img/favico.ico" type="image/x-icon" widgth="32px" height="32px">
 </head>
-    <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PNN5DN61N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -440,7 +440,9 @@
                 </div>
             </div>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d626.1959852510071!2d17.0076063!3d51.1124464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc206efb1a915%3A0xed5b779e497e2d24!2sBraniborska%2061%2C%2053-680%20Wroc%C5%82aw!5e0!3m2!1spl!2spl!4v1733858593489!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.8008212584414!2d17.005369376445028!3d51.112134971726185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc206efb1a915%3A0xed5b779e497e2d24!2sBraniborska%2061%2C%2053-680%20Wroc%C5%82aw!5e0!3m2!1sru!2spl!4v1733677121131!5m2!1sru!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            
         <p id="footer-text"></p>
     </footer>
 
